created single and double col templates.

--- a/what.html
+++ b/what.html
@@ -3,23 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Touchmark Wow Stories</title>
+    <title>What is a WOW Story?</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="two-col">
-    <!-- <header>Header</header> -->
-    <div class="image">Image</div>
+  <body class="one-col">
+    <!-- <header>Touchmark</header> -->
     <main>
       <div class="copy">
         <div class="page-title">
           <h1>Heading</h1>
         </div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. In eaque
-          maxime doloremque nesciunt nisi reprehenderit voluptate dolorum fugit
-          amet earum vitae, dolorem, ratione eligendi id!
-        </p>
-        <div class="btns">
+        copy
+        <div class="buttons">
           <button>Button 1</button>
           <button>Button 2</button>
         </div>
