added image button style and question 1 pg

--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
   </head>
   <body class="two-col">
     <!-- <header>Header</header> -->
-    <div class="image">Image</div>
+    <div class="image"><img src="./images/TM-WI-Caregiver-031.jpg" /></div>
     <main>
       <div class="copy">
         <div class="page-title">
-          <h1>Heading</h1>
+          <h1>WOW Stories</h1>
+          <p>
+            At Touchmark, team members live our company values every day, but quite often, team members go above and beyond the call of duty and Touchmark Gold Standard. These are the WOW stories we want to celebrate, and we thank you in advance for your submission.
+          </p>
         </div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. In eaque
-          maxime doloremque nesciunt nisi reprehenderit voluptate dolorum fugit
-          amet earum vitae, dolorem, ratione eligendi id!
-        </p>
         <div class="btns">
-          <button>Button 1</button>
-          <button>Button 2</button>
+          <a href="./what.html">Learn More</a></a>
+          <a href="a">Begin Submission</a>
         </div>
       </div>
     </main>
