--- a/what.html
+++ b/what.html
@@ -11,12 +11,20 @@
     <main>
       <div class="copy">
         <div class="page-title">
-          <h1>Heading</h1>
+          <h1>What is a WOW story?</h1>
+          <p>
+            A WOW story is a specific example of an interaction or experience
+            that shows the incredible lengths a team member has taken to solve a
+            unique problem, delight someone, or go out of their way and typical
+            job responsibilities in service of others. Examples can include
+            planning a milestone celebration, after-hours help, volunteering
+            extra help during a crisis or inclement weather, visiting someone in
+            need off-campus, celebrating a legacy or life in a special way, etc.
+          </p>
         </div>
-        copy
-        <div class="buttons">
-          <button>Button 1</button>
-          <button>Button 2</button>
+        <div class="btns">
+          <a>See an Example</a>
+          <a href="question-1.html">Begin Submission</a>
         </div>
       </div>
     </main>
