adjusted button sizes and placement

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="btns">
           <a href="./what.html">Learn More</a></a>
-          <a href="a">Begin Submission</a>
+          <a href="./question-1.html">Begin Submission</a>
         </div>
       </div>
     </main>
