--- a/question-1.html
+++ b/question-1.html
@@ -18,9 +18,17 @@
             specific as possible using the staff lookup option first.
           </p>
         </div>
-        <div class="btns">
-          <a>Continue</a>
+        <form id="item-form">
+          <div class="form-control">
+            <input type="text" class="form-input" id="name-input" name="name" />
+          </div>
+        </form>
+        <div class="btns form-control">
+          <button type="submit" class="btn">Continue</button>
         </div>
+        <!-- <div class="btns">
+          <a>Continue</a>
+        </div> -->
       </div>
     </main>
   </body>
