refactored form code

--- a/question-1.html
+++ b/question-1.html
@@ -18,7 +18,7 @@
             specific as possible using the staff lookup option first.
           </p>
         </div>
-        <form id="name-form">
+        <form id="name-form" class="form">
           <div class="form-control">
             <label for="name">
               <input
