--- a/question-2.html
+++ b/question-2.html
@@ -13,7 +13,7 @@
           <p>QUESTION 02/08</p>
           <h1>Which community is the applicable team member from?</h1>
         </div>
-        <form id="community-form">
+        <form id="community-form" class="form">
           <div class="form-control">
             <select
               type="text"
