added function to change question pages.

--- a/question-8.html
+++ b/question-8.html
@@ -34,7 +34,7 @@
           a person.
         </p>
         <div class="btns form-control">
-          <button type="submit" class="btn" id="form-submit" form="name-form">
+          <button type="submit" class="btn" id="form-submit" form="image-form">
             Continue
           </button>
         </div>
