added example page and button hover style

--- a/what.html
+++ b/what.html
@@ -23,12 +23,11 @@
           </p>
         </div>
         <div class="btns">
-          <a>See an Example</a>
+          <a href="example.html">See an Example</a>
           <a href="question-1.html">Begin Submission</a>
         </div>
       </div>
     </main>
     <script src="javascript.js"></script>
-
   </body>
 </html>
