updated wow example page

--- a/example.html
+++ b/example.html
@@ -8,32 +8,36 @@
   </head>
   <body class="two-col">
     <!-- <header>Header</header> -->
-    <div class="image"><img src="./images/collage.jpg" /></div>
+    <div class="image"><img src="./images/wowstory101524.jpg" /></div>
     <main>
       <div class="copy">
         <div class="page-title">
           <h1>WOW Story from Touchmark at Mount Bachelor Village</h1>
-          <p class="community-story">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            saepe aspernatur consequuntur ab corrupti cupiditate natus illum,
-            iste animi incidunt laudantium vitae alias tenetur eligendi unde,
-            quaerat at, aut dolores voluptatum. Aperiam laborum doloremque
-            nesciunt sequi facilis repudiandae nam sint neque velit voluptate,
-            magnam, dolor reiciendis praesentium animi minus hic iure
-            consectetur totam. Impedit ea inventore at! Cum accusamus commodi
-            voluptas fuga voluptatem quisquam magni nihil consequuntur debitis
-            odit minus harum reiciendis provident eos, et doloribus totam
-            aspernatur? Laboriosam repudiandae quasi quis natus ad! Obcaecati
-            facere, nam illo totam dolores autem rerum perferendis quis qui,
-            dolorum aperiam doloremque veritatis unde recusandae sit vitae modi
-            ipsum tempore earum magni debitis nulla sapiente quo! Explicabo,
-            dignissimos id. Sed qui similique, neque dolores eligendi temporibus
-            sapiente voluptatem quibusdam vitae quasi nisi ipsam eveniet amet
-            voluptates magnam odio mollitia atque quas, velit ullam dolor iure
-            ut sunt exercitationem! Eos quo quidem explicabo eius aut aspernatur
-            laudantium velit accusantium. Corrupti et hic quos ratione similique
-            rerum at, veritatis porro.
-          </p>
+          <div class="community-story">
+            <p>
+              Touchmark at Harwood Grove (TFND), prospective residents and
+              neighbors John & Jo have been coming to Touchmark events for
+              several years. Due to some changes in Jo's health, a majority of
+              the cooking, cleaning, driving, and household chores were falling
+              on John. The TFND sales team decided to surprise and delight them.
+              They provided them with a food care package from the Touchmark
+              kitchen courtesy of Ashley Thompson. The team delivered several
+              days' worth of food as a basket, and John shared how their
+              relationship began after John had delivered a May Day basket to Jo
+              many years ago. Their mothers were in cahoots, and John's mom had
+              called ahead to Jo's mom, letting her know John was on his way
+              over with a May Day basket. A kiss was shared, and the rest is
+              history!
+            </p>
+            <p>
+              The team received the following card from John and Jo: Melinda &
+              Crew: The world is a little brighter thanks to you, Touchmark, for
+              making our day very special. What great treats! The food was over
+              the top. We enjoyed every morsel and our fun visit. Kudos to the
+              chefs. No doubt the nicest May Basket we have ever received! John
+              & Jo Lawrence
+            </p>
+          </div>
         </div>
         <div class="btns">
           <a href="./question-1.html">Begin Submission</a>
